Fixed label overflow for older Safari versions

--- a/scripts/components/Shared/NavigationButtonLabel.scss
+++ b/scripts/components/Shared/NavigationButtonLabel.scss
@@ -156,6 +156,7 @@ $arrowDownTop: calc(-50% + 1px);
       white-space: pre;
       text-overflow: ellipsis;
       overflow-y: hidden;
+      position: relative;
       text-align: left;
       display: -webkit-box;
       -webkit-line-clamp: 2;
